<resources>
    <string name="app_name">Calculator</string>
    <string name="b1">Add</string>
    <string name="b2">Sub</string>
    <string name="b3">Mul</string>
    <string name="b4">Div</string>
    <string name="t1">Result</string>
    <string name="e1">Enter first number</string>
    <string name="e2">Enter second number</string>
    <string name="b5">Clear</string>
    <string name="footer">Made by Asmit</string>
</resources>